# binlog

./: .gitignore  CMakeLists.txt
example/: NewFeatureTest.cpp
include/binlog/: Address.hpp  Session.hpp  SessionWriter.hpp  adapt_plus_type.hpp  binlog.hpp  create_source_and_event.hpp  default_session.hpp
include/mserialize/: cx_string.hpp  singular.hpp  visit.hpp
include/mserialize/detail/: Serializer.hpp  Tag.hpp  integer_to_hex.hpp  type_traits.hpp
test/doctest/detail/: doctest.h
test/integration/: IntegrationTest.cpp  LoggingBoostTypes.cpp  LoggingEnums.cpp  LoggingPointers.cpp
test/unit/binlog/: TestMultiThread.cpp  TestPointers.cpp  TestSessionWriter.cpp  TestStreamableObject.cpp
test/unit/mserialize/: roundtrip.cpp  visit.cpp
